force-app/main/default/objects/BU__c/BU__c.object-meta.xml
<CustomObject>
    <description>Object to store Business Unit Account Classifications for NS Sales</description>
    <label>Account Classification</label>
    <nameField>
        <displayFormat>Acct-Classification-{0000000000}</displayFormat>
        <label>Account Classification</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Classifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>