force-app/main/default/objects/BU__c/fields/NS_Account_Type_BU__c.field-meta.xml
<CustomField>
    <fullName>NS_Account_Type_BU__c</fullName>
    <description>Sales - Classify the type of Account the customer is based on the NS Business group or user.</description>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Beneficial Cargo Owner</fullName>
            </value>
            <value>
                <fullName>Port</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Drayage Provider</fullName>
            </value>
            <value>
                <fullName>Broker/3PL</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Economic Development Ally</fullName>
            </value>
            <value>
                <fullName>Engineering Consultant</fullName>
            </value>
            <value>
                <fullName>Railroad</fullName>
            </value>
            <value>
                <fullName>Site Selector</fullName>
            </value>
            <value>
                <fullName>State or Local EDC</fullName>
            </value>
            <value>
                <fullName>Utility</fullName>
            </value>
            <value>
                <fullName>Shipper</fullName>
            </value>
            <value>
                <fullName>Receiver</fullName>
            </value>
            <value>
                <fullName>Shipper/Receiver</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
                <isActive>false</isActive>
                <label>Broker</label>
            </value>
            <value>
                <fullName>Direct Customer</fullName>
                <isActive>false</isActive>
                <label>Direct Customer</label>
            </value>
            <value>
                <fullName>Indirect Customer</fullName>
                <isActive>false</isActive>
                <label>Indirect Customer</label>
            </value>
            <value>
                <fullName>Partner</fullName>
                <isActive>false</isActive>
                <label>Partner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>