force-app/main/default/objects/BU__c/fields/NS_Business_Group_BU__c.field-meta.xml
<CustomField>
    <fullName>NS_Business_Group_BU__c</fullName>
    <description>Sales - Business Group Breakdown sheet provided by NS. Dependant fields based on selected Unit, group(major/minor) and line of business</description>
    <label>Business Group_BU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Merchandise</fullName>
            </value>
            <value>
                <fullName>Coal</fullName>
                <isActive>false</isActive>
                <label>Coal</label>
            </value>
            <value>
                <fullName>Industrial Development</fullName>
                <isActive>false</isActive>
                <label>Industrial Development</label>
            </value>
            <value>
                <fullName>Industrial Prodcucts</fullName>
                <isActive>false</isActive>
                <label>Industrial Prodcucts</label>
            </value>
            <value>
                <fullName>Intermodal</fullName>
                <isActive>false</isActive>
                <label>Intermodal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>