force-app/main/default/objects/BU__c/fields/NS_Line_of_Business_BU__c.field-meta.xml
<CustomField>
    <fullName>NS_Line_of_Business_BU__c</fullName>
    <description>displayed alphabetically</description>
    <label>Line of Business_BU</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NS_Minor_Group_BU__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anthracite</fullName>
            </value>
            <value>
                <fullName>Coke</fullName>
            </value>
            <value>
                <fullName>Domestic Met</fullName>
            </value>
            <value>
                <fullName>Export Met</fullName>
            </value>
            <value>
                <fullName>Export Steam</fullName>
            </value>
            <value>
                <fullName>Hub</fullName>
            </value>
            <value>
                <fullName>Hunt</fullName>
            </value>
            <value>
                <fullName>IMC</fullName>
            </value>
            <value>
                <fullName>LTL</fullName>
            </value>
            <value>
                <fullName>Petcoke</fullName>
            </value>
            <value>
                <fullName>Truckload</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>Utility North</fullName>
            </value>
            <value>
                <fullName>Utility South</fullName>
            </value>
            <value>
                <fullName>Iron Ore</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Triple Crown</fullName>
            </value>
            <value>
                <fullName>Unassigned</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Other Non/Met</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Anthracite (870)</fullName>
                <isActive>false</isActive>
                <label>Anthracite (870)</label>
            </value>
            <value>
                <fullName>Coke (850)</fullName>
                <isActive>false</isActive>
                <label>Coke (850)</label>
            </value>
            <value>
                <fullName>Domestic Met (830)</fullName>
                <isActive>false</isActive>
                <label>Domestic Met (830)</label>
            </value>
            <value>
                <fullName>Export Met (810)</fullName>
                <isActive>false</isActive>
                <label>Export Met (810)</label>
            </value>
            <value>
                <fullName>Export Steam (820)</fullName>
                <isActive>false</isActive>
                <label>Export Steam (820)</label>
            </value>
            <value>
                <fullName>Hub (714)</fullName>
                <isActive>false</isActive>
                <label>Hub (714)</label>
            </value>
            <value>
                <fullName>Hunt (715)</fullName>
                <isActive>false</isActive>
                <label>Hunt (715)</label>
            </value>
            <value>
                <fullName>ID Export Steam           </fullName>
                <isActive>false</isActive>
                <label>ID Export Steam           </label>
            </value>
            <value>
                <fullName>IMC (701)</fullName>
                <isActive>false</isActive>
                <label>IMC (701)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>