force-app/main/default/objects/BU__c/fields/NS_Major_Group_BU__c.field-meta.xml
<CustomField>
    <fullName>NS_Major_Group_BU__c</fullName>
    <description>Sales - field dependent on Sub bus group</description>
    <label>Major Group_BU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>Intermodal</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Metals &amp; Construction</fullName>
            </value>
            <value>
                <fullName>Agriculture, Forest and Consumer Products</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Industrial Development</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
                <isActive>false</isActive>
                <label>Construction</label>
            </value>
            <value>
                <fullName>Forest and Consumer Products</fullName>
                <isActive>false</isActive>
                <label>Forest and Consumer Products</label>
            </value>
            <value>
                <fullName>Metals</fullName>
                <isActive>false</isActive>
                <label>Metals</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>