force-app/main/default/objects/BU__c/fields/NS_Minor_Group_BU__c.field-meta.xml
<CustomField>
    <fullName>NS_Minor_Group_BU__c</fullName>
    <description>Sales - field dependent on major group</description>
    <label>Minor Group_BU</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NS_Major_Group_BU__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Triple Crown</fullName>
            </value>
            <value>
                <fullName>Unassigned</fullName>
            </value>
            <value>
                <fullName>Utility Coal</fullName>
            </value>
            <value>
                <fullName>Export Coal</fullName>
            </value>
            <value>
                <fullName>Domestic Met Coal</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Other Non/Met</fullName>
            </value>
            <value>
                <fullName>Agrifuels</fullName>
            </value>
            <value>
                <fullName>Corn &amp; Other Grains</fullName>
            </value>
            <value>
                <fullName>Feed &amp; Feed Prds</fullName>
            </value>
            <value>
                <fullName>Fertilizers</fullName>
            </value>
            <value>
                <fullName>Flour</fullName>
            </value>
            <value>
                <fullName>Food Oils</fullName>
            </value>
            <value>
                <fullName>Food Products</fullName>
            </value>
            <value>
                <fullName>Soybeans</fullName>
            </value>
            <value>
                <fullName>Sweeteners</fullName>
            </value>
            <value>
                <fullName>Wheat</fullName>
            </value>
            <value>
                <fullName>Beverages/Cons Prds</fullName>
            </value>
            <value>
                <fullName>Canned Goods</fullName>
            </value>
            <value>
                <fullName>Graphic Paper</fullName>
            </value>
            <value>
                <fullName>Lumber &amp; Wood</fullName>
            </value>
            <value>
                <fullName>Pulp</fullName>
            </value>
            <value>
                <fullName>Pulpboard</fullName>
            </value>
            <value>
                <fullName>Wood Chips</fullName>
            </value>
            <value>
                <fullName>Crude Oil</fullName>
            </value>
            <value>
                <fullName>Inorganic Chemicals</fullName>
            </value>
            <value>
                <fullName>NGLs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>