force-app/main/default/objects/BU__c/fields/NS_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>NS_Record_Type_Name__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>