force-app/main/default/objects/BU__c/fields/NS_Sub_Business_Group_BU__c.field-meta.xml
<CustomField>
    <fullName>NS_Sub_Business_Group_BU__c</fullName>
    <description>Sales - Dependent field based on Business Group Selected</description>
    <label>Sub Business Group_BU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Industrial Products</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>