force-app/main/default/objects/BU__c/fields/NSSales_Business_Group__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Business_Group__c</fullName>
    <label>Business Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>Intermodal</fullName>
            </value>
            <value>
                <fullName>Industrial Prodcucts</fullName>
                <label>Industrial Products</label>
            </value>
            <value>
                <fullName>Industrial Development</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>