force-app/main/default/objects/BU__c/fields/NSSales_Group_Name1__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Group_Name1__c</fullName>
    <label>Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>