force-app/main/default/objects/BU__c/fields/Record_Type_Duplication_Check__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Duplication_Check__c</fullName>
    <label>Record Type Duplication Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>