force-app/main/default/objects/BU__c/recordTypes/NS_Sales_Automotive.recordType-meta.xml
<RecordType>
    <fullName>NS_Sales_Automotive</fullName>
    <active>true</active>
    <description>Account classification for Automotive Business Unit</description>
    <label>Automotive</label>
</RecordType>