force-app/main/default/objects/BU__c/recordTypes/NS_Sales_Coal.recordType-meta.xml
<RecordType>
    <fullName>NS_Sales_Coal</fullName>
    <active>true</active>
    <description>Account classification for Coal Business Unit</description>
    <label>Coal</label>
</RecordType>