force-app/main/default/objects/BU__c/recordTypes/NS_Sales_Industrial_Development.recordType-meta.xml
<RecordType>
    <fullName>NS_Sales_Industrial_Development</fullName>
    <active>true</active>
    <description>Account classification for Industrial Development Business Unit</description>
    <label>Industrial Development</label>
</RecordType>