force-app/main/default/objects/BU__c/recordTypes/NS_Sales_Industrial_Products.recordType-meta.xml
<RecordType>
    <fullName>NS_Sales_Industrial_Products</fullName>
    <active>true</active>
    <description>Account classification for Industrial Products Business Unit</description>
    <label>Industrial Products</label>
</RecordType>