force-app/main/default/objects/BU__c/recordTypes/NS_Sales_Intermodal.recordType-meta.xml
<RecordType>
    <fullName>NS_Sales_Intermodal</fullName>
    <active>true</active>
    <description>Account classification for Intermodal Business Unit</description>
    <label>Intermodal</label>
</RecordType>